istio/hostname-rest/k8s-gateway.yaml
# 假设已经存在一个网关 istio-gateway
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hostname.istio.lo
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames:
  - hostname.istio.lo
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: py-proxy-svc
      port: 80
